--- a/bio.html
+++ b/bio.html
@@ -9,8 +9,7 @@
 
     <title>Rebecca Leach | Biography</title>
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link href='https://fonts.googleapis.com/css?family=Orbitron:900,400' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway:300,800' rel='stylesheet' type='text/css'>
@@ -19,12 +18,33 @@
 
   <body>
 
-  <h1>Student Bio</h1>
+    <div class="container">
 
-  <h2>Rebecca Leach</h2>
+      <h1>Student Bio</h1>
 
-  <img src="me.jpg">
+      <h2>Rebecca Leach</h2>
 
+      <img src="me.jpg">
+
+      <p>Hi! I'm a fullstack web dev student at the University of Texas's Coding Bootcamp. I love cats, ice cream, Star Wars, static trapeze, and YA books. In my day job, I'm a copyeditor who works primarily with indie fiction writers, indie presses, and magazines.</p>
+
+      <h2>Contact Info:</h2>
+
+      <ul>
+
+        <li>
+          <strong>Email:</strong> <a href="mailto:rebeccapleach@gmail.com">rebeccapleach@gmail.com</a>
+        </li>
+        <li>
+          <strong>GitHub:</strong> <a href="http://github.com/rebeccaleach">rebeccaleach</a>
+        </li>
+        <li>
+          <strong>Portfolio:</strong> <a href="http://www.rebeccaleach.com">www.rebeccaleach.com</a>
+        </li>
+
+      </ul>
+
+    </div>
 
   </body>
 
